@@ -1,4 +1,4 @@
-/* $Id: fdm.h,v 1.251 2007-03-28 19:59:57 nicm Exp $ */
+/* $Id: fdm.h,v 1.252 2007-03-29 15:39:58 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -604,16 +604,9 @@ TAILQ_HEAD(expr, expritem);
 /* Rule list. */
 TAILQ_HEAD(rules, rule);
 
-/* Rule types. */
-enum ruletype {
-	RULE_EXPRESSION,
-	RULE_ALL
-};
-
 /* Rule entry. */
 struct rule {
 	u_int			 idx;
-	enum ruletype		 type;
 
 	struct strings		*accounts;
 	struct expr		*expr;
@@ -627,6 +620,7 @@ struct rule {
 	struct replstr		 value;
 
 	struct rules		 rules;
+	struct action		*lambda;
 	struct replstrs		*actions;
 
 	TAILQ_ENTRY(rule)	 entry;
