@@ -1,3 +1,13 @@
+29 March 2007
+
+* Lambda actions:
+
+	match "regexp" action mbox ...
+	match "regexp" actions {
+		rewrite ...
+		mbox ...
+	}
+
 28 March 2007
 
 * Compound actions, using a list in {}s, eg:
@@ -212,4 +222,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.59 2007-03-28 19:59:57 nicm Exp $
+$Id: CHANGES,v 1.60 2007-03-29 15:39:58 nicm Exp $
